--- a/.env
+++ b/.env
@@ -29,6 +29,6 @@ APP_SECRET=2dab8969bbe79fca06938b23e083a1d6
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@localhost/toms-cars"
+DATABASE_URL="mysql://root@localhost/toms-cars?dbVersion=5.6"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
