--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,4 +35,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-         - { path: ^/main, roles: ROLE_USER }
+         - { path: ^/cars, roles: ROLE_USER }
